--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <form id="resumeForm">
 
 <fieldset>
-<LEGend>PERSONAL INFORMATION</LEGend>
+<legend>PERSONAL INFORMATION</legend>
 
-<LABEL for="name">First Name: </LABEL>
+<label for="name">First Name: </label>
 <input type="text" id="name" name="name" required> <br />
 
 <label for="email">Email ID: </label>
@@ -31,24 +31,24 @@
 
 <fieldset>
 
-<LEGend>EDUCATION</LEGend>
+<legend>EDUCATION</legend>
 <label for="education">EDUCATION: </label>
-<TEXTarea id="education" name="education" rows="4" required></TEXTarea><br> 
+<textarea id="education" name="education" rows="4" required></textarea><br> 
 </fieldset>
 
 <fieldset>
-<LEGend>EXPERIENCE</LEGend>
+<legend>EXPERIENCE</legend>
 <label for="experience">EXPERIENCE: </label>
-<TEXTarea id="experience" name="experience" rows="4" required></TEXTarea><br>
+<textarea id="experience" name="experience" rows="4" required></textarea><br>
 </fieldset>
 
 <fieldset>
-<LEGend>SKILLS</LEGend>
+<legend>SKILLS</legend>
 <label for="skills">SKILLS: </label>
-<TEXTarea id="skills" name="skills" rows="4" required></TEXTarea><br>
+<textarea id="skills" name="skills" rows="4" required></textarea><br>
 </fieldset>
 
-<BUtton type="submit">GENERATE RESUME</BUtton>
+<button type="submit">GENERATE RESUME</button>
 
 </form>
 
