--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
 <fieldset>
 <legend>PERSONAL INFORMATION</legend>
 
-<label for="name">First Name: </label>
+<label for="name">Name: </label>
 <input type="text" id="name" name="name" required> <br />
 
 <label for="email">Email ID: </label>
-<input type="email" name="email" id="email"  required><br />
+<input type="email" id="email" name="email"  required><br />
 
 <label for="phone">Mobile No: </label>
-<input type="Mob" name="Mob" id="Mob"  required>
+<input type="Mob" id="Mob" name="Mob" required>
 
 
 <label for="profilePicture">Profile picture: </label>
-<input type="file" name="profilePicture" id="profilePicture" accept="image/*" required>
+<input type="file" id="profilePicture" name="profilePicture" accept="image/*" required>
 
 </fieldset>
 
