--- a/index.html
+++ b/index.html
@@ -12,47 +12,48 @@
     <form id="resumeForm">
 
 <fieldset>
-<legend>PERSONAL INFORMATION</legend>
+    <legend>PERSONAL INFORMATION </legend>
 
-<label for="name">Name: </label>
-<input type="text" id="name" name="name" required> <br />
+    <label for="name">Name: </label>
+    <input type="text" id="name" name="name" required> <br />
 
-<label for="email">Email ID: </label>
-<input type="email" id="email" name="email"  required><br />
+    <label for="email">Email ID: </label>
+    <input type="email" id="email" name="email"  required><br />
 
-<label for="phone">Mobile No: </label>
-<input type="Mob" id="Mob" name="Mob" required>
+    <label for="phone">Mobile No: </label>
+    <input type="Mob" id="Mob" name="Mob" required>
 
 
-<label for="profilePicture">Profile picture: </label>
-<input type="file" id="profilePicture" name="profilePicture" accept="image/*" required>
+    <label for="profilePicture">Profile picture: </label>
+    <input type="file" id="profilePicture" name="profilePicture" accept="image/*" required>
 
 </fieldset>
 
 <fieldset>
 
-<legend>EDUCATION</legend>
-<label for="education">EDUCATION: </label>
-<textarea id="education" name="education" rows="4" required></textarea><br> 
+   <legend>EDUCATION</legend>
+   <label for="education">EDUCATION: </label>
+   <textarea id="education" name="education" rows="4" required></textarea><br> 
 </fieldset>
 
 <fieldset>
-<legend>EXPERIENCE</legend>
-<label for="experience">EXPERIENCE: </label>
-<textarea id="experience" name="experience" rows="4" required></textarea><br>
+   <legend>EXPERIENCE</legend>
+   <label for="experience">EXPERIENCE: </label>
+   <textarea id="experience" name="experience" rows="4" required></textarea><br>
 </fieldset>
 
 <fieldset>
-<legend>SKILLS</legend>
-<label for="skills">SKILLS: </label>
-<textarea id="skills" name="skills" rows="4" required></textarea><br>
+   <legend>SKILLS</legend>
+   <label for="skills">SKILLS: </label>
+   <textarea id="skills" name="skills" rows="4" required></textarea><br>
 </fieldset>
 
 <button type="submit">GENERATE RESUME</button>
 
 </form>
 
-    <div id="resumeOutput">    </div>
+    <div id="resumeOutput">
+          </div>
     <script src="script.js"></script>
 </body>
 
